--- a/clusters/sas-test-aks/flux-system-automation.yaml
+++ b/clusters/sas-test-aks/flux-system-automation.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 2m
   sourceRef:
     kind: GitRepository
-    name: sas-test-app
+    name: flux-system
   git:
     checkout:
       ref:
