--- a/clusters/sas-test-aks/sas-test-app-registry.yaml
+++ b/clusters/sas-test-aks/sas-test-app-registry.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: flux-system
 spec:
   secretRef:
-    name: my-secret
+    name: regcred
   image: sasaksacrtest.azurecr.io/sas-test-app
   interval: 1m
