--- a/clusters/sas-test-aks/ingress.yaml
+++ b/clusters/sas-test-aks/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: echoserver-v2-secure
+  namespace: default
 spec:
   ingressClassName: external-nginx
   rules:
