--- a/clusters/sas-test-aks/ingress.yaml
+++ b/clusters/sas-test-aks/ingress.yaml
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: echoserver-v2-secure
   namespace: default
+  annotation:
+    nginx.ingress.kubernetes.io/rewrite-targer: /$2
 spec:
   ingressClassName: external-nginx
   rules:
